--- a/style.css
+++ b/style.css
@@ -873,9 +873,9 @@ a{
 
 .container:hover .card
 {
-  filter: blur(20px);
+  filter: blur(5px);
   transform: scale(0.9);
-  opacity: 0.5;
+  opacity: 0.8;
 }
 
 .container .card:hover
@@ -954,15 +954,14 @@ a{
 #entrance {
   width: 100%;
   height:800px;
- 
+ margin-left:30px;
   font-family: "Poppins", sans-serif;
   
 
 }
 
 .container {
- /* margin: 10px 10px;*/
-  /*color: white;*/
+ margin:0px; 
 }
 
 .heading {
@@ -1287,6 +1286,14 @@ footer .content .link-boxes .box{
   margin: 6px 0;
   list-style: none;
 }
+.content .link-boxes .box li {
+  color: #fff;
+  font-size: 14px;
+  font-weight: 400;
+  text-decoration: none;
+  opacity: 0.8;
+  transition: all 0.4s ease
+}
 .content .link-boxes .box li a{
   color: #fff;
   font-size: 14px;
@@ -1295,6 +1302,8 @@ footer .content .link-boxes .box{
   opacity: 0.8;
   transition: all 0.4s ease
 }
+
+
 .content .link-boxes .box li a:hover{
   opacity: 1;
   text-decoration: underline;
